# HuffmanCompressor

./: ArvoreBinaria.cpp  ArvoreBinaria.h  CMakeLists.txt  CodificacaoHuffman.cpp  CodigoHuffman.cpp  CodigoHuffman.h  DecodificacaoHuffman.cpp  FilaPriorizada.cpp  FilaPriorizada.h  Huffman.cpp  Huffman.h  NoHuffman.cpp  NoHuffman.h  main.cpp  pdf.pietro  png.txt  txt.txt  txt2.txt
